--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
 url = "2.5"
 futures-util = "0.3"
 futures-channel = "0.3"
-base64 = "0.22"
+base64 = "0.22.1"
 infer = "0.16.0"
 prettytable = "0.10.0"
 directories = "5.0.1"
@@ -60,6 +60,8 @@ thiserror = "2.0.12"
 aws-config = "1.5.18"
 aws-sdk-sts = "1.62.0"
 aws-sdk-iam = "1.64.0"
+aws-sdk-ec2 = "1.74.0"
+aws-sdk-ecr = "1.49.0"
 tempfile = "3.19.0"
 aes-gcm = "0.10.1"
 dashmap = "6.1.0"
@@ -89,6 +91,8 @@ aws-types = "1.3.6"
 aws-sdk-s3 = "1.82.0"
 colored = "3.0.0"
 scopeguard = "1.2.0"
+nebius = "0.1.0"
+tonic = { version = "0.11.0", features = ["transport", "codegen", "tls", "tls-roots"] }
 
 [lib]
 name = "nebulous"
