--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,7 @@ steps:
           echo "Detected branch: $BRANCH_NAME. Adding branch tag."
           DOCKER_TAG=$(echo "$BRANCH_NAME" | sed 's/[^a-z0-9._-]/-/g' | sed 's/^[.-]//' | sed 's/[.-]$//')
           echo "Transformed branch $BRANCH_NAME to Docker tag: $$DOCKER_TAG"
-          TAGS="$$TAGS -t us-docker.pkg.dev/$$PROJECT_ID/nebulous/server:$$DOCKER_TAG"
+          TAGS="$$TAGS -t us-docker.pkg.dev/$PROJECT_ID/nebulous/server:$$DOCKER_TAG"
         fi
         
         # Add latest tag if on main branch
