fix: add volumes

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -42,3 +42,9 @@ services:
 
 volumes:
   sccache:
+  nebu-ts-authkey:
+    driver: local
+  nebu-ts-sock:
+    driver: local
+  nebu-tmp:
+    driver: local
